--- a/oops_Flight_and_Hotel_reservation/.project
+++ b/oops_Flight_and_Hotel_reservation/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>oops_Flight_and_Hotel_reservation</name>
+	<name>OOPS</name>
 	<comment></comment>
 	<projects>
 	</projects>
